# pamcon

./: .gitignore  COO.h  CSC.h  CSC_adder.h  CSR.h  Makefile  README.md  SESSION_LOG.md  ami.py  benchmark-boem.ipynb  benchmark-consensus-distance-stats.csv  benchmark-hbgf.ipynb  benchmark-lf.ipynb  benchmark-mcla.ipynb  benchmark-network-analysis.ipynb  benchmark-nmf.ipynb  benchmark-plots.ipynb  benchmark-problem-generation.ipynb  benchmark-quality-stats.csv  benchmark-v1.ipynb  benchmark-v2.ipynb  benchmark-v3.ipynb  benchmark-v4.ipynb  benchmark-v5.ipynb  benchmark-v6.ipynb  benchmark-v7.ipynb  benchmark-v8.ipynb  consensus.cpp  consensus.h  consensus.py  dist-distribution.cpp  distances.py  example.py  example_large.py  lf-cons-evaluation-quality-stats.csv  main.cpp  main_user.cpp  preprocess.cpp  pyproject.toml  setup.py  (+5 more)
CONPAS/: SetPartition.cpp  SetPartition.h  SetPartitionVector.cpp  SetPartitionVector.h  Utility.cpp  Utility.h
Kirkley-Newman/: .gitignore  kn.pyx  main.py
Lancichinetti-Fortunato/: main.py
pamcon/: __init__.py  _core.cpp  consensus.py
prototype-tests/: benchmark-best-candidate.ipynb  benchmark-boem.ipynb  benchmark-consensus-distance-stats.csv  benchmark-hbgf.ipynb  benchmark-lf.ipynb  benchmark-mcla.ipynb  benchmark-nmf.ipynb  benchmark-plots.ipynb  benchmark-problem-generation.ipynb  benchmark-refined-bilouvain-merge.ipynb  benchmark-refined.ipynb  benchmark-v1.ipynb  benchmark-v2.ipynb  benchmark-v3.ipynb  benchmark-v4.ipynb  benchmark-v5.ipynb  benchmark-v8.ipynb  consensus.py  distances.py  levine_13-problem-generation.ipynb  mcl.py  (+9 more)
(+1840 files in other folders)
